tests/query_errors/window_mut_event/error.txt
Error: 
    6 |   let event = a
      |       ^^^^^^^^^ Can not assign to `event` here